gnulib: %n is not supported on old glibc or on native win32

On old glibc even if %n is supported we may get a crash, so it is
better to skip it while on native win32 %n will abort the program.
These changes were took from upstream.

https://bugzilla.gnome.org/show_bug.cgi?id=756382